--- a/css/style.css
+++ b/css/style.css
@@ -34,15 +34,33 @@ nav ul {
   width: 30%;
   text-decoration: none;
   list-style: none;
+  gap: 2rem;
 }
 
 main {
   display: flex;
   justify-content: center;
-  min-height: 100vh;
-  padding: 20px 10%;
-  max-width: 70%;
-  margin: 0 auto;
+  flex-direction: column;
+  /* min-height: 100vh; */
+  /* padding: 20px 10%; */
+  /* max-width: 70%; */
+  /* margin: 0 auto; */
+}
+
+#Home {
+  background: url("../images/laptop.png") no-repeat center center/cover;
+  /* height: 100vh; */
+  /* border: 3px solid red; */
+  /* width: 100vw; */
+  max-height: 100vh;
+}
+
+.name {
+  font-size: 3rem;
+  color: #dbd0d0;
+  text-align: center;
+  margin: 10% 0;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 p {
