--- a/css/style.css
+++ b/css/style.css
@@ -11,22 +11,28 @@ body {
 
 /* Navigation Bar Styling */
 
-/* nav {
-  list-style: none;
-  display: flex;
-  justify-content: flex-end;
+nav {
   background-color: rgb(223, 223, 223);
   position: fixed;
   width: 100%;
 }
 
-nav a {
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+}
+
+nav ul li {
   font-size: 1.5rem;
   padding: 2rem;
   margin: 0 15px;
+}
+
+nav ul li a {
   text-decoration: none;
   color: #000;
-} */
+}
 
 /* Profile Styling */
 
@@ -58,9 +64,9 @@ nav a {
 }
 
 @media screen and (max-width: 768px) {
-  /* nav {
+  nav {
     display: none;
-  } */
+  }
   .about {
     flex-direction: column;
   }
@@ -81,68 +87,5 @@ nav a {
 
   .info {
     margin-top: 2rem;
-  }
-}
-
-/* Test */
-
-/* Reset some default styles */
-
-/* Basic styles for the navigation bar */
-.navbar {
-  background-color: #333;
-  overflow: hidden;
-}
-
-/* Style for the navigation bar links */
-.navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  transition: background-color 0.3s ease;
-}
-
-/* Hover effect for navigation bar links */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Responsive navigation bar */
-@media screen and (max-width: 600px) {
-  .navbar {
-    overflow: hidden;
-  }
-  .navbar a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
-/* Add more media queries for further responsive adjustments */
-
-/* Mobile navigation toggle button */
-.icon {
-  display: none;
-  cursor: pointer;
-}
-
-@media screen and (max-width: 600px) {
-  .navbar.responsive {
-    position: relative;
-  }
-  .navbar.responsive .icon {
-    display: block;
-  }
-  .navbar.responsive a:not(:first-child) {
-    display: none;
-  }
-  .navbar.responsive a.icon {
-    float: right;
-    display: block;
   }
 }
