--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,11 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background: #fdfdfd;
+  background: black;
+  color: aliceblue;
 }
 
-/* Navigation Bar Styling */
+/*   Navigation Bar Styling 
 
 nav {
   background-color: rgb(223, 223, 223);
@@ -34,7 +35,7 @@ nav ul li a {
   color: #000;
 }
 
-/* Profile Styling */
+ Profile Styling 
 
 .about {
   display: flex;
@@ -83,9 +84,27 @@ nav ul li a {
   .profile-pic-img {
     width: 80%;
     margin: 2rem;
-  }
+  } 
 
+ 
+} */
+/* .info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 2.5rem;
+} */
+
+.info {
+  /* center */
+  margin: 30vh auto;
+  text-align: center;
+  font-size: 2.5rem;
+}
+
+@media screen and (max-width: 768px) {
   .info {
-    margin-top: 2rem;
+    margin: 20vh auto;
   }
 }
