--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,7 @@ nav ul li a {
   padding: 1rem;
 }
 
-.profile-pic {
-}
+
 
 .profile-pic-img {
   width: 65%;
@@ -96,15 +95,38 @@ nav ul li a {
   font-size: 2.5rem;
 } */
 
+.profile-pic {
+  /* margin: 2rem auto 0 auto; */
+  width: 100%;
+}
+
+.profile-pic-img {
+  width: 10%;
+  margin: auto;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .info {
   /* center */
-  margin: 30vh auto;
+  margin: 35vh auto;
   text-align: center;
   font-size: 2.5rem;
 }
 
 @media screen and (max-width: 768px) {
   .info {
-    margin: 20vh auto;
+    margin: 50vh auto;
+  }
+
+  .profile-pic-img {
+    top: 30%;
+    width: 50%;
+  }
+
+  .profile-pic {
+    margin: 0 auto;
   }
 }
