--- a/css/style.css
+++ b/css/style.css
@@ -5,128 +5,19 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
-  background: grey;
-  color: aliceblue;
+  font-family: "Montserrat", sans-serif;
 }
 
-/*   Navigation Bar Styling 
-
-nav {
-  background-color: rgb(223, 223, 223);
-  position: fixed;
-  width: 100%;
+.navigation-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 10%;
 }
 
-nav ul {
+.nav-list {
+  display: flex;
   list-style: none;
-  display: flex;
-  justify-content: flex-end;
-}
-
-nav ul li {
-  font-size: 1.5rem;
-  padding: 2rem;
-  margin: 0 15px;
-}
-
-nav ul li a {
   text-decoration: none;
-  color: #000;
-}
-
- Profile Styling 
-
-.about {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  gap: 10rem;
-}
-
-.name {
-  font-size: 2rem;
-  font-weight: 700;
-  padding: 1rem;
-}
-
-
-
-.profile-pic-img {
-  width: 65%;
-}
-
-.info {
-  margin-top: -10rem;
-  text-align: center;
-  font-size: 2.5rem;
-}
-
-@media screen and (max-width: 768px) {
-  nav {
-    display: none;
-  }
-  .about {
-    flex-direction: column;
-  }
-
-  .name {
-    margin-top: 2rem;
-    text-align: center;
-  }
-
-  .profile-pic {
-    margin: -9rem auto 0 auto;
-  }
-
-  .profile-pic-img {
-    width: 80%;
-    margin: 2rem;
-  } 
-
- 
-} */
-/* .info {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-size: 2.5rem;
-} */
-
-.profile-pic {
-  /* margin: 2rem auto 0 auto; */
-  width: 100%;
-}
-
-.profile-pic-img {
-  width: 10%;
-  margin: auto;
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.info {
-  /* center */
-  margin: 35vh auto;
-  text-align: center;
-  font-size: 2.5rem;
-}
-
-@media screen and (max-width: 768px) {
-  .info {
-    margin: 50vh auto;
-  }
-
-  .profile-pic-img {
-    top: 30%;
-    width: 50%;
-  }
-
-  .profile-pic {
-    margin: 0 auto;
-  }
+  gap: 30px;
 }
