--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,18 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-.navigation-bar {
+header {
+  display: grid;
+  height: 100vh;
+  
+}
+
+.nav-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 10%;
+  padding: 0 50px;
+  border: 2px solid blue;
 }
 
 .nav-list {
@@ -20,4 +27,5 @@ body {
   list-style: none;
   text-decoration: none;
   gap: 30px;
+  border: 2px solid red;
 }
